[gd_scene load_steps=6 format=3 uid="uid://level1_01"]

[ext_resource type="Script" path="res://scripts/game/level_1.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://bplayer01" path="res://scenes/player.tscn" id="2_player"]
[ext_resource type="PackedScene" uid="uid://benemy01" path="res://scenes/enemy.tscn" id="3_enemy"]
[ext_resource type="PackedScene" uid="uid://bhud01" path="res://scenes/hud.tscn" id="4_hud"]
[ext_resource type="AudioStream" path="res://assets/music/tap.wav" id="5_tap"]

[node name="Level1" type="Node"]
script = ExtResource("1_script")

[node name="GamePlay" type="Node2D" parent="."]

[node name="Player" parent="GamePlay" instance=ExtResource("2_player")]

[node name="Enemy" parent="GamePlay" instance=ExtResource("3_enemy")]

[node name="HUD" parent="." instance=ExtResource("4_hud")]

[node name="TapSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_tap")

[node name="BeatTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
